# Loris_Lang

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
code_generator/: code_generator.py
code_generator/idl/: mod_lang_compile_II.idl
code_generator/json_output/: json_output
code_generator/template/: pri_script_nl.jinja2
debug/mod_lang_parse/mod_lang_parse_I/: CMakeLists.txt
debug/mod_lang_parse/mod_lang_parse_I/private/include/: lang_lex.h  mod_lang_parse_I.h
debug/mod_lang_parse/mod_lang_parse_I/private/script/: mod_lang_parse_I_test.nl
debug/mod_lang_parse/mod_lang_parse_I/private/src/: lang_ast.c  lang_lex.c  lang_parse.c  mod_lang_parse_I.c
debug/mod_lang_parse/public/include/: lang_ast.h
files/dynamic_exec/: Makefile
files/script/: buggy_script.nl  merge_test_all.py  self_heal.nl  selfcheck.batch
files/script/config/: system_prompt.txt  user_prompt.txt
files/script/embedded/: add.ll  add.nl  test_var.ll
files/script/leetcode/: 101_symetric_binary_tree.ll  102_level_binary_tree.ll  102_level_binary_tree.nl  104_max_depth_of_binary_tree.ll  104_max_depth_of_binary_tree.nl  105_build_binary_tree_from_preinorder.ll  108_convert_preorder_array_to_binary_tree.ll  1143_longest_common_substring.ll  114_flatten_binary_tree.ll  114_flatten_binary_tree.nl  118_pascal_triangle.ll  11_contain_most_water.ll  121_best_time_buy_sell.ll  121_best_time_buy_sell.nl  124_binary_tree_max_path_sum.ll  128_longest_seq.ll  128_longest_seq.nl  12_int_to_roman.ll  131_partition.ll  136_single_number.ll  138_copy_random_list.ll  139_wordbreak.ll  139_wordbreak.nl  13_roman_to_int.ll  141_is_loop_circle.ll  141_is_loop_circle.nl  142_is_loop_circle2.ll  142_is_loop_circle2.nl  146_lru_cache.ll  146_lru_cache.nl  148_sort_list.ll  14_longest_common_prefix.ll  152_max_product_sub.ll  152_max_product_sub.nl  153_find_min_in_rotated_sorted_array.ll  153_find_min_in_rotated_sorted_array.nl  155_min_stack.ll  15_three_sum.ll  15_three_sum.nl  160_insection_find.ll  (+112 more)
files/script/lib/: array_permutation.ll  array_to_binary_tree.ll  array_to_single_list.ll  basic_lib.ll  hash_to_counter.ll  hash_to_lru.nl  hash_to_queue.nl  hash_to_stack.ll
files/script/test/: test_all_one.ll  test_all_one.nl
files/script/test/advanced/: test_fib.nl
files/script/test/basic/comment/: test_comment.nl
files/script/test/basic/convert/: test_convert.nl
files/script/test/basic/function/: test_def.ll  test_func_arg2.ll  test_func_class.nl
files/script/test/basic/json/: test_parse_json.nl  test_parse_json2.ll
files/script/test/basic/lifetime/: test_lifetime.nl
files/script/test/basic/logic/: test_andor.nl  test_ifelse.ll  test_xor.ll
files/script/test/basic/loop/: test_for_break.nl  test_for_continue.ll  test_while_break.ll  test_while_continue.ll
files/script/test/basic/math/: test_var_float.nl  test_var_math.ll
files/script/test/basic/type_check/: test_type_check.ll
files/script/test/diff/: file2  test_diff.ll
files/script/test/gpt/: test1.nl  test2.nl  test_ask_gpt.ll
files/script/test/parse_error/block/: test_block_error1.ll  test_block_recursive.ll
files/script/test/parse_error/char/: test_char_error1.ll  test_char_error2.ll
files/script/test/parse_error/comment/: test_comment_error1.ll
files/script/test/parse_error/def/: test_def_error1.ll  test_def_error2.nl  test_def_error3.ll
files/script/test_all/: selfcheck.batch
files/script/test_all/advanced/: fib.ll  fib.lua  fib.py  fib1.ll  fib2.ll  fib4.ll  fib5.ll  profile.lua  profile.py  test_fib.ll  test_profile.ll  test_profile2.ll
files/script/test_all/basic/: test_all.ll
files/script/test_all_one/: test_all.batch
files/script/test_all_one/advanced/: profile.lua  profile.py
files/script/test_need_verify/: test_all.ll
files/script/test_need_verify/diff/: file1
files/script/test_need_verify/gpt/: test1.ll  test2.ll
src/framework/: CMakeLists.txt  config.h.in
src/framework/private/include/: mod_bundle_imp.h  mod_imp.h  std_hazard_ptr_imp.h  std_lock_free_key_hash_imp.h  std_lock_free_list_imp.h
src/framework/private/script/: init_script.ll  init_script.nl
src/framework/private/src/: main.c  mod.c  mod_bundle.c  std_lock_free_key_hash.c  std_lock_free_list.c  std_log.c  std_safe.c
src/framework/public/include/: config.h  mod.h  mod_bundle.h  mod_ownership.h  std_assert.h  std_common.h  std_def.h  std_hazard_ptr.h  std_lock.h  std_lock_free_key_hash.h  std_lock_free_list.h  std_log.h  std_random.h  std_safe.h  std_typedef.h
src/framework/public/src/: json-maker.c
src/mod_helloworld/mod_helloworld_I/: CMakeLists.txt
src/mod_lang_compile/mod_lang_compile_II/: CMakeLists.txt
src/mod_lang_compile/mod_lang_compile_II/private/include/: ast_code.h  ast_compile.h  lang_ast.h  mod_lang_compile_II.h
src/mod_lang_compile/mod_lang_compile_II/private/script/: mod_lang_compile_II_test.nl
src/mod_lang_compile/mod_lang_compile_II/private/src/: ast_code.c  ast_compile.c  lang_ast.c  mod_lang_compile_II.c  mod_lang_compile_II_bundle.c
src/mod_lang_compile/mod_lang_compile_II/private/src/stub/: stub_shell_mod_lang_compile_II.c
src/mod_lang_compile/mod_lang_compile_II/public/: desc.json
src/mod_lang_compile/public/include/: ast_code.h  lang_ast.h  mod_lang_compile.h
src/mod_lang_parse/mod_lang_parse_II/: CMakeLists.txt
src/mod_lang_parse/mod_lang_parse_II/private/include/: lang_ast.h  lang_lex.h  lang_parse.h  mod_lang_parse_II.h
src/mod_lang_parse/mod_lang_parse_II/private/script/: mod_lang_parse_II_test.nl
src/mod_lang_parse/mod_lang_parse_II/private/src/: lang_ast.c  lang_lex.c  lang_parse.c  mod_lang_parse_II.c  mod_lang_parse_II_bundle.c  public_lang_ast.c
src/mod_lang_parse/mod_lang_parse_II/private/src/stub/: stub_shell_mod_lang_parse_II.c
src/mod_lang_parse/mod_lang_parse_II/public/: desc.json
src/mod_lang_parse/public/include/: mod_lang_parse.h  public_lang_ast.h
src/mod_lang_vm/mod_lang_vm_I/: CMakeLists.txt
src/mod_lang_vm/public/include/: mod_lang_vm.h
src/mod_shell/mod_shell_I/: CMakeLists.txt
src/mod_shell/public/include/: mod_shell.h
(+211 files in other folders)
